--- a/assets/css/events.css
+++ b/assets/css/events.css
@@ -7,7 +7,7 @@
 }
 
 #eventResults {
-    display:none;
+    xxxdisplay:none;
 }
 
 #events {
@@ -15,7 +15,7 @@
 }
 
 #itinerary {
-    display: none;
+    xxxdisplay: none;
 }
 
 .buy-button-title{
